[package]
name = "ldl_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-files = "0.6.1"
actix-web-actors = "4.1.0"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.9"